--- a/src/server/home/index.njk
+++ b/src/server/home/index.njk
@@ -10,6 +10,9 @@
     <div class="govuk-grid-column-two-thirds">
       <div class="govuk-body" data-testid="app-page-body">
         <p></p>
+
+        <a href="/dashboard" class="govuk-button govuk-button--start govuk-!-margin-top-2 govuk-!-margin-bottom-8">Start
+          now</a>
       </div>
     </div>
   </div>
