--- a/src/server/dashboard/index.njk
+++ b/src/server/dashboard/index.njk
@@ -12,7 +12,7 @@
         <main class="govuk-main-wrapper ">
           <div class="govuk-grid-row">
             <div class="govuk-grid-column-one-half">
-              <a href="../mocks/dashboard_1.html" class="portal-card-link">
+              <a href="../mocks/dashboard_1.njk" class="portal-card-link">
                 <div class="govuk-summary-card">
                   <div class="govuk-summary-card__title-wrapper">
                     <h2 class="govuk-summary-card__title">Holding summary</h2>
