--- a/src/server/mocks/dashboard_1.njk
+++ b/src/server/mocks/dashboard_1.njk
@@ -18,7 +18,7 @@
   <!-- D3.js -->
   <script src="https://d3js.org/d3.v7.min.js"></script>
 
-  <link href="/assets/css/dashboard_1.css" rel="stylesheet"/>
+  <link href="/public/assets/css/dashboard_1.css" rel="stylesheet"/>
 
 </head>
 
@@ -296,7 +296,9 @@
 <!-- OS branding + MapLibre JS -->
 <script src="https://cdn.jsdelivr.net/gh/OrdnanceSurvey/os-api-branding@latest/os-api-branding.js"></script>
 <script src="https://unpkg.com/maplibre-gl@5.7.1/dist/maplibre-gl.js"></script>
-<script src="/assets/js/dashboard_1.js"></script>
+
+
+<script type="module" src="/public/assets/js/dashboard_1.js"></script>
 
 </body>
 </html>
