--- a/src/server/dashboard/index.njk
+++ b/src/server/dashboard/index.njk
@@ -12,7 +12,7 @@
         <main class="govuk-main-wrapper ">
           <div class="govuk-grid-row">
             <div class="govuk-grid-column-one-half">
-              <a href="../mocks/dashboard_1.njk" class="portal-card-link">
+              <a href="../mocks/dashboard_1" class="portal-card-link">
                 <div class="govuk-summary-card">
                   <div class="govuk-summary-card__title-wrapper">
                     <h2 class="govuk-summary-card__title">Holding summary</h2>
@@ -27,7 +27,7 @@
               </a>
             </div>
             <div class="govuk-grid-column-one-half">
-              <a href="../mocks/dashboard_2.html" class="portal-card-link">
+              <a href="../mocks/dashboard_2" class="portal-card-link">
                 <div class="govuk-summary-card">
                   <div class="govuk-summary-card__title-wrapper">
                     <h2 class="govuk-summary-card__title">Animal summary</h2>
@@ -46,7 +46,7 @@
 
           <div class="govuk-grid-row">
             <div class="govuk-grid-column-one-half">
-              <a href="../mocks/dashboard_3.html" class="portal-card-link">
+              <a href="../mocks/dashboard_3" class="portal-card-link">
                 <div class="govuk-summary-card">
                   <div class="govuk-summary-card__title-wrapper">
                     <h2 class="govuk-summary-card__title">Movements (all holdings)</h2>
@@ -62,7 +62,7 @@
               </a>
             </div>
             <div class="govuk-grid-column-one-half">
-              <a href="../mocks/dashboard_4.html" class="portal-card-link">
+              <a href="../mocks/dashboard_4" class="portal-card-link">
                 <div class="govuk-summary-card">
                   <div class="govuk-summary-card__title-wrapper">
                     <h2 class="govuk-summary-card__title">Movement summary (holding)</h2>
@@ -80,7 +80,7 @@
           </div>
           <div class="govuk-grid-row">
             <div class="govuk-grid-column-one-half">
-              <a href="../mocks/dashboard_5.html" class="portal-card-link">
+              <a href="../mocks/dashboard_5" class="portal-card-link">
                 <div class="govuk-summary-card">
                   <div class="govuk-summary-card__title-wrapper">
                     <h2 class="govuk-summary-card__title">Journey by haulier</h2>
@@ -96,7 +96,7 @@
               </a>
             </div>
             <div class="govuk-grid-column-one-half">
-              <a href="../mocks/dashboard_6.html" class="portal-card-link">
+              <a href="../mocks/dashboard_6" class="portal-card-link">
                 <div class="govuk-summary-card">
                   <div class="govuk-summary-card__title-wrapper">
                     <h2 class="govuk-summary-card__title">Zonal movements summary</h2>
@@ -114,7 +114,7 @@
           </div>
           <div class="govuk-grid-row">
             <div class="govuk-grid-column-one-half">
-              <a href="../mocks/dashboard_7.html" class="portal-card-link">
+              <a href="../mocks/dashboard_7" class="portal-card-link">
                 <div class="govuk-summary-card">
                   <div class="govuk-summary-card__title-wrapper">
                     <h2 class="govuk-summary-card__title">Cohort tracing</h2>
@@ -130,7 +130,7 @@
               </a>
             </div>
             <div class="govuk-grid-column-one-half">
-              <a href="../mocks/dashboard_8.html" class="portal-card-link">
+              <a href="../mocks/dashboard_8" class="portal-card-link">
                 <div class="govuk-summary-card">
                   <div class="govuk-summary-card__title-wrapper">
                     <h2 class="govuk-summary-card__title">Sheep and goat inspections</h2>
@@ -148,7 +148,7 @@
           </div>
           <div class="govuk-grid-row">
             <div class="govuk-grid-column-one-half">
-              <a href="../mocks/dashboard_9.html" class="portal-card-link">
+              <a href="../mocks/dashboard_9" class="portal-card-link">
                 <div class="govuk-summary-card">
                   <div class="govuk-summary-card__title-wrapper">
                     <h2 class="govuk-summary-card__title">Unregistered herds and flocks</h2>
@@ -164,7 +164,7 @@
               </a>
             </div>
             <div class="govuk-grid-column-one-half">
-              <a href="../mocks/dashboard_10.html" class="portal-card-link">
+              <a href="../mocks/dashboard_10" class="portal-card-link">
                 <div class="govuk-summary-card">
                   <div class="govuk-summary-card__title-wrapper">
                     <h2 class="govuk-summary-card__title">Scrapie flock scheme audit</h2>
