--- a/src/server/mocks/dashboard_2.njk
+++ b/src/server/mocks/dashboard_2.njk
@@ -14,7 +14,7 @@
         rel="stylesheet"/>
   <link href="https://unpkg.com/maplibre-gl@5.7.1/dist/maplibre-gl.css"
         rel="stylesheet"/>
-  <link href="/assets/css/dashboard_2.css" rel="stylesheet">
+  <link href="/public/assets/css/dashboard_2.css" rel="stylesheet"/>
   <!-- D3.js -->
   <script src="https://d3js.org/d3.v7.min.js"></script>
 
@@ -233,7 +233,7 @@
 <script src="https://cdn.jsdelivr.net/gh/OrdnanceSurvey/os-api-branding@latest/os-api-branding.js"></script>
 <script src="https://unpkg.com/maplibre-gl@5.7.1/dist/maplibre-gl.js"></script>
 
-<script src="/assets/js/dashboard_2.js"></script>
+<script type="module" src="/public/assets/js/dashboard_2.js"></script>
 
 
 </body>
