--- a/src/server/mocks/dashboard_5.njk
+++ b/src/server/mocks/dashboard_5.njk
@@ -15,7 +15,7 @@
   <link href="https://unpkg.com/maplibre-gl@5.7.1/dist/maplibre-gl.css"
         rel="stylesheet">
 
-  <link href="/assets/css/dashboard_5.css" rel="stylesheet">
+  <link href="/public/assets/css/dashboard_5.css" rel="stylesheet"/>
 </head>
 
 <body class="govuk-template__body">
