--- a/src/server/mocks/dashboard_7.njk
+++ b/src/server/mocks/dashboard_7.njk
@@ -13,7 +13,7 @@
   <link href="https://unpkg.com/maplibre-gl@5.7.1/dist/maplibre-gl.css"
         rel="stylesheet"/>
 
-  <link href="/assets/css/dashboard_7.css" rel="stylesheet">
+  <link href="/public/assets/css/dashboard_7.css" rel="stylesheet"/>
 
 
 </head>
