--- a/src/server/mocks/dashboard_8.njk
+++ b/src/server/mocks/dashboard_8.njk
@@ -8,7 +8,7 @@
   <link href="https://cdn.jsdelivr.net/npm/govuk-frontend@5.13.0/dist/govuk/govuk-frontend.min.css"
         rel="stylesheet">
 
-  <link href="/assets/css/dashboard_8.css" rel="stylesheet">
+  <link href="/public/assets/css/dashboard_8.css" rel="stylesheet"/>
 
 </head>
 
