--- a/src/server/mocks/dashboard_9.njk
+++ b/src/server/mocks/dashboard_9.njk
@@ -11,7 +11,7 @@
 
   <!-- D3.js -->
   <script src="https://d3js.org/d3.v7.min.js"></script>
-  <link href="/assets/css/dashboard_9.css" rel="stylesheet">
+  <link href="/public/assets/css/dashboard_9.css" rel="stylesheet"/>
   <style>
 
   </style>
