--- a/src/server/mocks/dashboard_2.njk
+++ b/src/server/mocks/dashboard_2.njk
@@ -1,52 +1,32 @@
-<!DOCTYPE html>
-<html class="govuk-template" lang="en">
-<head>
-  <meta charset="utf-8">
-  <title>CADS - MI – Animal summary dashboard</title>
-  <meta content="width=device-width, initial-scale=1" name="viewport">
+{% extends 'layouts/page.njk' %}
+
+{% block content %}
+  {{ appHeading({
+    text: 'Animal Summary',
+    caption: "Animal Summary"
+  }) }}
 
   <!-- GOV.UK Frontend CSS -->
-  <link href="https://cdn.jsdelivr.net/npm/govuk-frontend@5.13.0/dist/govuk/govuk-frontend.min.css"
-        rel="stylesheet">
 
-  <!-- OS branding + MapLibre GL -->
-  <link href="https://cdn.jsdelivr.net/gh/OrdnanceSurvey/os-api-branding@latest/os-api-branding.css"
-        rel="stylesheet"/>
-  <link href="https://unpkg.com/maplibre-gl@5.7.1/dist/maplibre-gl.css"
-        rel="stylesheet"/>
-  <link href="/public/assets/css/dashboard_2.css" rel="stylesheet"/>
-  <!-- D3.js -->
-  <script src="https://d3js.org/d3.v7.min.js"></script>
 
-  <style>
 
-  </style>
-</head>
 
 <body class="govuk-template__body">
 <script>
   document.body.className += ' js-enabled';
 </script>
+<link href="https://cdn.jsdelivr.net/npm/govuk-frontend@5.13.0/dist/govuk/govuk-frontend.min.css"
+      rel="stylesheet">
 
-<header class="govuk-header" role="banner">
-  <div class="govuk-header__container govuk-width-container">
-    <div class="dashboard-header">
-      <div class="dashboard-service-name">
-        <a class="govuk-header__link govuk-header__link--homepage" href="index.njk">
-            <span class="govuk-header__logotype">
-              <span class="govuk-header__logotype-text">
-                CADS - MI
-              </span>
-            </span>
-        </a>
-      </div>
-      <nav aria-label="Dashboard navigation" class="dashboard-tabs">
-        <a aria-current="page" href="#">Animal Summary</a>
-        <a class="dashboard-tab-inactive" href="#">Movement History</a>
-      </nav>
-    </div>
-  </div>
-</header>
+<!-- OS branding + MapLibre GL -->
+<link href="https://cdn.jsdelivr.net/gh/OrdnanceSurvey/os-api-branding@latest/os-api-branding.css"
+      rel="stylesheet"/>
+<link href="https://unpkg.com/maplibre-gl@5.7.1/dist/maplibre-gl.css"
+      rel="stylesheet"/>
+<link href="/public/assets/css/dashboard_2.css" rel="stylesheet"/>
+<!-- D3.js -->
+<script src="https://d3js.org/d3.v7.min.js"></script>
+
 
 <div class="govuk-width-container">
 
@@ -237,4 +217,4 @@
 
 
 </body>
-</html>
+{% endblock %}
