--- a/src/server/mocks/dashboard_6.njk
+++ b/src/server/mocks/dashboard_6.njk
@@ -1,44 +1,27 @@
-<!DOCTYPE html>
-<html class="govuk-template" lang="en">
-<head>
-  <meta charset="utf-8">
-  <title>CADS - MI – Zonal movements summary</title>
-  <meta content="width=device-width, initial-scale=1" name="viewport">
+{% extends 'layouts/page.njk' %}
 
-  <link href="https://cdn.jsdelivr.net/npm/govuk-frontend@5.13.0/dist/govuk/govuk-frontend.min.css"
-        rel="stylesheet">
+{% block content %}
+  {{ appHeading({
+    text: 'Zonal Movements Summary',
+    caption: ""
+  }) }}
 
-  <link href="https://cdn.jsdelivr.net/gh/OrdnanceSurvey/os-api-branding@latest/os-api-branding.css"
-        rel="stylesheet">
-  <link href="https://unpkg.com/maplibre-gl@5.7.1/dist/maplibre-gl.css"
-        rel="stylesheet">
 
-  <link href="/public/assets/css/dashboard_6.css" rel="stylesheet"/>
 
-</head>
+
 
 <body class="govuk-template__body">
 <script>document.body.className += ' js-enabled';</script>
+<link href="https://cdn.jsdelivr.net/npm/govuk-frontend@5.13.0/dist/govuk/govuk-frontend.min.css"
+      rel="stylesheet">
 
-<header class="govuk-header" role="banner">
-  <div class="govuk-header__container govuk-width-container">
-    <div class="dashboard-header">
-      <div class="dashboard-service-name">
-        <a class="govuk-header__link govuk-header__link--homepage" href="index.njk">
-            <span class="govuk-header__logotype">
-              <span class="govuk-header__logotype-text">
-                CADS - MI
-              </span>
-            </span>
-        </a>
-      </div>
-      <nav aria-label="Zonal movement navigation" class="dashboard-tabs">
-        <a aria-current="page" href="#">Zonal movements summary</a>
-        <a href="#">Zonal movements detail</a>
-      </nav>
-    </div>
-  </div>
-</header>
+<link href="https://cdn.jsdelivr.net/gh/OrdnanceSurvey/os-api-branding@latest/os-api-branding.css"
+      rel="stylesheet">
+<link href="https://unpkg.com/maplibre-gl@5.7.1/dist/maplibre-gl.css"
+      rel="stylesheet">
+
+<link href="/public/assets/css/dashboard_6.css" rel="stylesheet"/>
+
 
 <div class="govuk-width-container">
 
@@ -283,17 +266,6 @@
   </main>
 </div>
 
-<footer class="govuk-footer" role="contentinfo">
-  <div class="govuk-width-container">
-    <div class="govuk-footer__meta">
-      <div class="govuk-footer__meta-item govuk-footer__meta-item--grow">
-        <p class="govuk-footer__licence-description">
-          Central Animal Data Service – prototype dashboard
-        </p>
-      </div>
-    </div>
-  </div>
-</footer>
 
 <script src="https://cdn.jsdelivr.net/gh/OrdnanceSurvey/os-api-branding@latest/os-api-branding.js"></script>
 <script src="https://unpkg.com/maplibre-gl@5.7.1/dist/maplibre-gl.js"></script>
@@ -371,4 +343,4 @@
 </script>
 
 </body>
-</html>
+{% endblock %}
