--- a/src/server/mocks/dashboard_9.njk
+++ b/src/server/mocks/dashboard_9.njk
@@ -1,45 +1,22 @@
-<!DOCTYPE html>
-<html class="govuk-template" lang="en">
-<head>
-  <meta charset="utf-8">
-  <title>CADS - MI – Unregistered herds/flocks</title>
-  <meta content="width=device-width, initial-scale=1" name="viewport">
+{% extends 'layouts/page.njk' %}
 
-  <!-- GOV.UK Frontend CSS -->
-  <link href="https://cdn.jsdelivr.net/npm/govuk-frontend@5.13.0/dist/govuk/govuk-frontend.min.css"
-        rel="stylesheet">
+{% block content %}
+  {{ appHeading({
+    text: 'Unregistered herds/flocks'
+  }) }}
 
-  <!-- D3.js -->
-  <script src="https://d3js.org/d3.v7.min.js"></script>
-  <link href="/public/assets/css/dashboard_9.css" rel="stylesheet"/>
-  <style>
-
-  </style>
-</head>
 
 <body class="govuk-template__body">
 <script>
   document.body.className += ' js-enabled';
 </script>
+<link href="https://cdn.jsdelivr.net/npm/govuk-frontend@5.13.0/dist/govuk/govuk-frontend.min.css"
+      rel="stylesheet">
 
-<header class="govuk-header" role="banner">
-  <div class="govuk-header__container govuk-width-container">
-    <div class="dashboard-header">
-      <div class="dashboard-service-name">
-        <a class="govuk-header__link govuk-header__link--homepage" href="index.njk">
-            <span class="govuk-header__logotype">
-              <span class="govuk-header__logotype-text">
-                CADS - MI
-              </span>
-            </span>
-        </a>
-      </div>
-      <div class="dashboard-page-title">
-        Unregistered herds/flocks
-      </div>
-    </div>
-  </div>
-</header>
+<!-- D3.js -->
+<script src="https://d3js.org/d3.v7.min.js"></script>
+<link href="/public/assets/css/dashboard_9.css" rel="stylesheet"/>
+
 
 <div class="govuk-width-container">
 
@@ -243,18 +220,6 @@
   </main>
 </div>
 
-<footer class="govuk-footer" role="contentinfo">
-  <div class="govuk-width-container">
-    <div class="govuk-footer__meta">
-      <div class="govuk-footer__meta-item govuk-footer__meta-item--grow">
-        <p class="govuk-footer__licence-description">
-          Central Animal Data Service – prototype dashboard
-        </p>
-      </div>
-    </div>
-  </div>
-</footer>
-
 <script>
   document.addEventListener('DOMContentLoaded', function () {
 
@@ -371,4 +336,4 @@
 </script>
 
 </body>
-</html>
+{% endblock %}
