--- a/src/server/mocks/dashboard_1.njk
+++ b/src/server/mocks/dashboard_1.njk
@@ -2,30 +2,27 @@
 
 {% block content %}
   {{ appHeading({
-    text: 'Holding Summary',
-    caption: "Holding Summary"
+    text: 'Holding Summary'
   }) }}
-
-  <!-- OS branding + MapLibre GL -->
-
-
-  <!-- D3.js -->
 
 
 
 
 <body class="govuk-template__body">
-<script src="https://d3js.org/d3.v7.min.js"></script>
-
-<link href="/public/assets/css/dashboard_1.css" rel="stylesheet"/>
-<link href="https://cdn.jsdelivr.net/gh/OrdnanceSurvey/os-api-branding@latest/os-api-branding.css"
-      rel="stylesheet"/>
-<link href="https://unpkg.com/maplibre-gl@5.7.1/dist/maplibre-gl.css"
-      rel="stylesheet"/>
 <script>
   document.body.className += ' js-enabled';
 </script>
 
+<link rel="stylesheet"
+      href="https://cdn.jsdelivr.net/npm/govuk-frontend@5.13.0/dist/govuk/govuk-frontend.min.css">
+
+<link href="https://cdn.jsdelivr.net/gh/OrdnanceSurvey/os-api-branding@latest/os-api-branding.css"
+      rel="stylesheet"/>
+<link href="https://unpkg.com/maplibre-gl@5.7.1/dist/maplibre-gl.css"
+      rel="stylesheet"/>
+
+<link href="/public/assets/css/dashboard_1.css" rel="stylesheet"/>
+<script src="https://d3js.org/d3.v7.min.js"></script>
 
 <div class="govuk-width-container">
 
@@ -260,7 +257,9 @@
             </div>
           </div>
         </div>
-
+        <p class="govuk-body-s">
+          Contains OS data © Crown copyright and database right
+          <span id="os-year"></span>.
       </div>
     </section>
 
@@ -271,7 +270,6 @@
 <!-- OS branding + MapLibre JS -->
 <script src="https://cdn.jsdelivr.net/gh/OrdnanceSurvey/os-api-branding@latest/os-api-branding.js"></script>
 <script src="https://unpkg.com/maplibre-gl@5.7.1/dist/maplibre-gl.js"></script>
-
 
 <script type="module" src="/public/assets/js/dashboard_1.js"></script>
 
