Anonymized real data.

--- a/src/server/mocks/dashboard_1.njk
+++ b/src/server/mocks/dashboard_1.njk
@@ -41,21 +41,21 @@
         <div class="govuk-grid-column-one-quarter">
           <div class="govuk-form-group">
             <label class="govuk-label" for="filter-holding-no">Holding No.</label>
-            <input class="govuk-input" id="filter-holding-no" value="13/168/0128">
+            <input class="govuk-input" id="filter-holding-no" value="1X/1XX/01XX">
           </div>
         </div>
 
         <div class="govuk-grid-column-one-quarter">
           <div class="govuk-form-group">
             <label class="govuk-label" for="filter-holder-name">CPH holder name</label>
-            <input class="govuk-input" id="filter-holder-name" value="Thrift Farm Holdings Ltd">
+            <input class="govuk-input" id="filter-holder-name" value="A Farm Ltd">
           </div>
         </div>
 
         <div class="govuk-grid-column-one-quarter">
           <div class="govuk-form-group">
             <label class="govuk-label" for="filter-herd-mark">Herd mark</label>
-            <input class="govuk-input" id="filter-herd-mark" value="245531">
+            <input class="govuk-input" id="filter-herd-mark" value="299991">
           </div>
         </div>
       </div>
@@ -78,13 +78,13 @@
         </thead>
         <tbody class="govuk-table__body">
         <tr class="govuk-table__row">
-          <td class="govuk-table__cell">13/168/0128</td>
+          <td class="govuk-table__cell">1X/1XX/0XXX</td>
           <td class="govuk-table__cell">Not known</td>
           <td class="govuk-table__cell">TL9105 0130</td>
-          <td class="govuk-table__cell">Thrift Farm Holdings Ltd</td>
-          <td class="govuk-table__cell">Thrift Farm House Northley Hill Mayland, Essex CM3 4DP</td>
-          <td class="govuk-table__cell">Essex County Council</td>
-          <td class="govuk-table__cell">01234 567890</td>
+          <td class="govuk-table__cell">A farm in the uk Ltd</td>
+          <td class="govuk-table__cell">A Farm Ltd, London, SW1</td>
+          <td class="govuk-table__cell">A Council</td>
+          <td class="govuk-table__cell">01999 999999</td>
           <td class="govuk-table__cell">Sheep, cattle, goats</td>
         </tr>
         </tbody>
