--- a/src/server/mocks/dashboard_10.njk
+++ b/src/server/mocks/dashboard_10.njk
@@ -36,8 +36,8 @@
           <div class="govuk-form-group">
             <label class="govuk-label" for="filter-holding">Holding no.</label>
             <select class="govuk-select" id="filter-holding">
-              <option>08/070/0012</option>
-              <option>08/070/0058</option>
+              <option>6X/7X9/0XX0</option>
+              <option>X8/0X0/0XX8</option>
             </select>
           </div>
         </div>
@@ -97,11 +97,11 @@
                 </thead>
                 <tbody class="govuk-table__body">
                 <tr class="govuk-table__row">
-                  <td class="govuk-table__cell">08/070/0012</td>
+                  <td class="govuk-table__cell">6X/7X9/0XX0</td>
                   <td class="govuk-table__cell">Agricultural holding</td>
-                  <td class="govuk-table__cell">Mrs Alison Hewitson</td>
-                  <td class="govuk-table__cell">High Scarr Farm, Cockermouth, Cumbria CA13 9HS</td>
-                  <td class="govuk-table__cell">01900825250</td>
+                  <td class="govuk-table__cell">A Person</td>
+                  <td class="govuk-table__cell">A Farm Ltd, London, SW1</td>
+                  <td class="govuk-table__cell">01999999999</td>
                 </tr>
                 </tbody>
               </table>
@@ -176,9 +176,9 @@
                   <td class="govuk-table__cell">21</td>
                   <td class="govuk-table__cell">OFF</td>
                   <td class="govuk-table__cell">08/01/2016</td>
-                  <td class="govuk-table__cell">08/060/0050</td>
+                  <td class="govuk-table__cell">X8/0X0/0XX0</td>
                   <td class="govuk-table__cell">Store market</td>
-                  <td class="govuk-table__cell">NY120205500</td>
+                  <td class="govuk-table__cell">NY129999500</td>
                 </tr>
                 </tbody>
               </table>
@@ -205,7 +205,7 @@
                 <tbody class="govuk-table__body">
                 <tr class="govuk-table__row">
                   <td class="govuk-table__cell">119563</td>
-                  <td class="govuk-table__cell">UK 0 10585 21981</td>
+                  <td class="govuk-table__cell">UK 0 1XXXX5 21XX1</td>
                   <td class="govuk-table__cell">Sheep</td>
                   <td class="govuk-table__cell">1</td>
                 </tr>
