--- a/src/server/mocks/dashboard_2.njk
+++ b/src/server/mocks/dashboard_2.njk
@@ -48,8 +48,8 @@
         <div class="govuk-grid-column-one-quarter">
           <h2 class="govuk-heading-s govuk-!-margin-bottom-1">Tagged at</h2>
           <p class="govuk-body govuk-!-margin-bottom-0">
-            GB 1810 0058<br>
-            C and D Auction Marts Ltd
+            GB 9999 0058<br>
+            A Farm Ltd
           </p>
         </div>
         <div class="govuk-grid-column-one-quarter">
@@ -84,7 +84,7 @@
                 <tbody class="govuk-table__body">
                 <tr class="govuk-table__row">
                   <td class="govuk-table__cell">06/04/2018</td>
-                  <td class="govuk-table__cell">06/001/0085</td>
+                  <td class="govuk-table__cell">0X/0XX/0XX5</td>
                 </tr>
                 </tbody>
               </table>
@@ -99,7 +99,7 @@
                 <tbody class="govuk-table__body">
                 <tr class="govuk-table__row">
                   <td class="govuk-table__cell">Agricultural holding</td>
-                  <td class="govuk-table__cell">P K Turnbull</td>
+                  <td class="govuk-table__cell">Bob Smith</td>
                 </tr>
                 </tbody>
               </table>
@@ -113,7 +113,7 @@
                 <tbody class="govuk-table__body">
                 <tr class="govuk-table__row">
                   <td class="govuk-table__cell">
-                    Hill View, Walton, Carlisle, Cumbria, CA5 7NH
+                     A Farm Ltd, London, SW1
                   </td>
                 </tr>
                 </tbody>
@@ -129,8 +129,8 @@
                 </thead>
                 <tbody class="govuk-table__body">
                 <tr class="govuk-table__row">
-                  <td class="govuk-table__cell">Cumbria County Council</td>
-                  <td class="govuk-table__cell">01697 897257</td>
+                  <td class="govuk-table__cell">London Council</td>
+                  <td class="govuk-table__cell">01999 999999</td>
                   <td class="govuk-table__cell">53</td>
                 </tr>
                 </tbody>
