--- a/src/server/mocks/dashboard_3.njk
+++ b/src/server/mocks/dashboard_3.njk
@@ -192,44 +192,44 @@
                   <td class="govuk-table__cell">Sheep</td>
                   <td class="govuk-table__cell">28</td>
                   <td class="govuk-table__cell">13/04/2021</td>
-                  <td class="govuk-table__cell">53/467/0020</td>
+                  <td class="govuk-table__cell">5X/4XX/0XX0</td>
                   <td class="govuk-table__cell">Agricultural holding</td>
                   <td class="govuk-table__cell">Cambridgeshire County Council</td>
                   <td class="govuk-table__cell">England</td>
-                  <td class="govuk-table__cell">512006260010</td>
+                  <td class="govuk-table__cell">512999999910</td>
                 </tr>
 
                 <tr class="govuk-table__row">
                   <td class="govuk-table__cell">Sheep</td>
                   <td class="govuk-table__cell">18</td>
                   <td class="govuk-table__cell">23/03/2021</td>
-                  <td class="govuk-table__cell">47/220/0015</td>
+                  <td class="govuk-table__cell">4X/2XX/0XX5</td>
                   <td class="govuk-table__cell">Agricultural holding</td>
                   <td class="govuk-table__cell">Leeds City Council</td>
                   <td class="govuk-table__cell">England</td>
-                  <td class="govuk-table__cell">512006296700</td>
+                  <td class="govuk-table__cell">512999999910</td>
                 </tr>
 
                 <tr class="govuk-table__row">
                   <td class="govuk-table__cell">Sheep</td>
                   <td class="govuk-table__cell">36</td>
                   <td class="govuk-table__cell">05/02/2021</td>
-                  <td class="govuk-table__cell">68/402/0076</td>
+                  <td class="govuk-table__cell">6X/4XX/0XX6</td>
                   <td class="govuk-table__cell">Store market</td>
                   <td class="govuk-table__cell">Leicestershire County Council</td>
                   <td class="govuk-table__cell">England</td>
-                  <td class="govuk-table__cell">512007091507</td>
+                  <td class="govuk-table__cell">512999999910</td>
                 </tr>
 
                 <tr class="govuk-table__row">
                   <td class="govuk-table__cell">Sheep</td>
                   <td class="govuk-table__cell">20</td>
                   <td class="govuk-table__cell">08/01/2021</td>
-                  <td class="govuk-table__cell">51/399/0045</td>
+                  <td class="govuk-table__cell">5X/3XX/0XX5</td>
                   <td class="govuk-table__cell">Agricultural holding</td>
                   <td class="govuk-table__cell">Lincolnshire County Council</td>
                   <td class="govuk-table__cell">England</td>
-                  <td class="govuk-table__cell">512007057197</td>
+                  <td class="govuk-table__cell">512999999910</td>
                 </tr>
 
                 <!-- Add further rows as needed -->
