--- a/src/server/mocks/dashboard_4.njk
+++ b/src/server/mocks/dashboard_4.njk
@@ -65,7 +65,7 @@
         <div class="govuk-grid-column-one-quarter">
           <div class="govuk-form-group">
             <label class="govuk-label" for="filter-holding-no">Holding No. (CPH)</label>
-            <input class="govuk-input" id="filter-holding-no" value="06/111/0339">
+            <input class="govuk-input" id="filter-holding-no" value="0X/1XX/0XX9">
           </div>
         </div>
 
@@ -96,7 +96,7 @@
           <div class="govuk-form-group">
             <label class="govuk-label" for="filter-holder-name">CPH holder name</label>
             <input class="govuk-input" id="filter-holder-name"
-                   value="C and D Auction Marts Ltd">
+                   value="A Farm LTD">
           </div>
         </div>
 
