--- a/src/server/mocks/dashboard_5.njk
+++ b/src/server/mocks/dashboard_5.njk
@@ -51,7 +51,7 @@
         <div class="govuk-grid-column-one-quarter">
           <div class="govuk-form-group">
             <label class="govuk-label" for="filter-vehicle-reg">Vehicle registration</label>
-            <input class="govuk-input" id="filter-vehicle-reg" value="AT05COW">
+            <input class="govuk-input" id="filter-vehicle-reg" value="XX19XXX">
           </div>
         </div>
 
@@ -123,21 +123,21 @@
                 <tbody class="govuk-table__body">
                 <tr class="govuk-table__row">
                   <td class="govuk-table__cell">Loaded &amp; unloaded</td>
-                  <td class="govuk-table__cell">AT05COW</td>
+                  <td class="govuk-table__cell">XX19XXX</td>
                   <td class="govuk-table__cell">07/09/2023</td>
-                  <td class="govuk-table__cell">06/111/0339</td>
+                  <td class="govuk-table__cell">0X/1X1/0XX9</td>
                 </tr>
                 <tr class="govuk-table__row">
                   <td class="govuk-table__cell">Loaded</td>
-                  <td class="govuk-table__cell">AT05COW</td>
+                  <td class="govuk-table__cell">XX19XXX</td>
                   <td class="govuk-table__cell">07/09/2023</td>
-                  <td class="govuk-table__cell">12/345/6789</td>
+                  <td class="govuk-table__cell">1X/3X5/6XX9</td>
                 </tr>
                 <tr class="govuk-table__row">
                   <td class="govuk-table__cell">Unloaded</td>
-                  <td class="govuk-table__cell">AT05COW</td>
+                  <td class="govuk-table__cell">XX19XXX</td>
                   <td class="govuk-table__cell">07/09/2023</td>
-                  <td class="govuk-table__cell">36/784/0003</td>
+                  <td class="govuk-table__cell">3X/7X4/0XX3</td>
                 </tr>
                 </tbody>
               </table>
@@ -204,7 +204,7 @@
                 <tbody class="govuk-table__body">
                 <tr class="govuk-table__row">
                   <td class="govuk-table__cell">1916714</td>
-                  <td class="govuk-table__cell">UK 0 105839 01956</td>
+                  <td class="govuk-table__cell">UK 0 1XXXXX1 0XXX6</td>
                   <td class="govuk-table__cell">Sheep</td>
                   <td class="govuk-table__cell">1</td>
                 </tr>
