--- a/src/server/mocks/dashboard_6.njk
+++ b/src/server/mocks/dashboard_6.njk
@@ -44,7 +44,7 @@
             <label class="govuk-label" for="filter-holding-interest">Holding of interest</label>
             <select class="govuk-select" id="filter-holding-interest">
               <option>01/126/0128</option>
-              <option>06/111/0339</option>
+              <option>0X/1X1/0XX9</option>
             </select>
           </div>
         </div>
@@ -182,7 +182,7 @@
                 </thead>
                 <tbody class="govuk-table__body">
                 <tr class="govuk-table__row">
-                  <td class="govuk-table__cell">01/127/040</td>
+                  <td class="govuk-table__cell">3X/7X4/0XX3</td>
                   <td class="govuk-table__cell">Agricultural holding</td>
                   <td class="govuk-table__cell">Yes</td>
                   <td class="govuk-table__cell">1.09</td>
@@ -210,7 +210,7 @@
                 </thead>
                 <tbody class="govuk-table__body">
                 <tr class="govuk-table__row">
-                  <td class="govuk-table__cell">01/127/070</td>
+                  <td class="govuk-table__cell">3X/7X4/0XX4</td>
                   <td class="govuk-table__cell">Agricultural holding</td>
                   <td class="govuk-table__cell">No</td>
                   <td class="govuk-table__cell">3.66</td>
