--- a/src/server/mocks/dashboard_7.njk
+++ b/src/server/mocks/dashboard_7.njk
@@ -40,7 +40,7 @@
         <div class="govuk-grid-column-one-quarter">
           <div class="govuk-form-group">
             <label class="govuk-label" for="filter-animal-id">Cohort animal ID</label>
-            <input class="govuk-input" id="filter-animal-id" value="UK 0 26380 0959">
+            <input class="govuk-input" id="filter-animal-id" value="UK 0 2XXX0 0XX9">
           </div>
         </div>
 
@@ -101,17 +101,17 @@
             </thead>
             <tbody class="govuk-table__body">
             <tr class="govuk-table__row">
-              <td class="govuk-table__cell">01/27/0030</td>
-              <td class="govuk-table__cell">G HUNTER &amp; SON</td>
-              <td class="govuk-table__cell">Manor Farm, Ridgmont, Bedfordshire MK17 9BG</td>
-              <td class="govuk-table__cell">Central Bedfordshire Council</td>
+              <td class="govuk-table__cell">3X/7X4/0XX4</td>
+              <td class="govuk-table__cell">A Farm Ltd</td>
+              <td class="govuk-table__cell">A Farm Ltd, London, SW1</td>
+              <td class="govuk-table__cell">Lodon Council</td>
               <td class="govuk-table__cell">England</td>
             </tr>
             <tr class="govuk-table__row">
-              <td class="govuk-table__cell">01/27/0031</td>
-              <td class="govuk-table__cell">THAME FARMERS AUCTION MART LTD</td>
-              <td class="govuk-table__cell">The Cattle Market, Thame, Oxfordshire OX9 3FR</td>
-              <td class="govuk-table__cell">Oxfordshire County Council</td>
+              <td class="govuk-table__cell">3X/7X4/0XX5</td>
+              <td class="govuk-table__cell">B Farm Ltd</td>
+              <td class="govuk-table__cell">B Farm Ltd, London, SW1</td>
+              <td class="govuk-table__cell">London Council</td>
               <td class="govuk-table__cell">England</td>
             </tr>
             </tbody>
@@ -160,13 +160,13 @@
                 </thead>
                 <tbody class="govuk-table__body">
                 <tr class="govuk-table__row">
-                  <td class="govuk-table__cell">UK 0 26380 0955</td>
-                  <td class="govuk-table__cell">01/27/0030</td>
+                  <td class="govuk-table__cell">UK 0 2XXX0 0XX5</td>
+                  <td class="govuk-table__cell">3X/7X4/0XX4</td>
                   <td class="govuk-table__cell">Live</td>
                 </tr>
                 <tr class="govuk-table__row">
-                  <td class="govuk-table__cell">UK 0 26380 0956</td>
-                  <td class="govuk-table__cell">01/27/0030</td>
+                  <td class="govuk-table__cell">UK 0 2XXX0 0XX6</td>
+                  <td class="govuk-table__cell">3X/7X4/0XX4</td>
                   <td class="govuk-table__cell">Live</td>
                 </tr>
                 </tbody>
@@ -193,10 +193,10 @@
                 </thead>
                 <tbody class="govuk-table__body">
                 <tr class="govuk-table__row">
-                  <td class="govuk-table__cell">UK 0 26380 0955</td>
-                  <td class="govuk-table__cell">01/27/0031</td>
-                  <td class="govuk-table__cell">THAME FARMERS AUCTION MART LTD</td>
-                  <td class="govuk-table__cell">The Cattle Market, Thame, Oxfordshire OX9 3FR</td>
+                  <td class="govuk-table__cell">UK 0 2XXX0 0XX5</td>
+                  <td class="govuk-table__cell">3X/7X4/0XX5</td>
+                  <td class="govuk-table__cell">B Farm Ltd</td>
+                  <td class="govuk-table__cell">B Farm Ltd, London, SW1</td>
                 </tr>
                 </tbody>
               </table>
