--- a/src/server/mocks/dashboard_8.njk
+++ b/src/server/mocks/dashboard_8.njk
@@ -35,8 +35,8 @@
           <div class="govuk-form-group">
             <label class="govuk-label" for="filter-holding">Holding no.</label>
             <select class="govuk-select" id="filter-holding">
-              <option>08/070/0058</option>
-              <option>06/111/0339</option>
+              <option>X8/0X0/0XX8</option>
+              <option>0X/1X1/0XX9</option>
             </select>
           </div>
         </div>
@@ -105,12 +105,12 @@
             </thead>
             <tbody class="govuk-table__body">
             <tr class="govuk-table__row">
-              <td class="govuk-table__cell">08/070/0058</td>
+              <td class="govuk-table__cell">X8/0X0/0XX8</td>
               <td class="govuk-table__cell">Agricultural holding</td>
-              <td class="govuk-table__cell">H1748</td>
-              <td class="govuk-table__cell">T &amp; A TEASDALE LTD</td>
-              <td class="govuk-table__cell">Sale Hill House, Rougheye, Cumbria CA17 4XY</td>
-              <td class="govuk-table__cell">01768776584</td>
+              <td class="govuk-table__cell">H1XX</td>
+              <td class="govuk-table__cell">A Farm Ltd</td>
+              <td class="govuk-table__cell">A Farm Ltd, London, SW1</td>
+              <td class="govuk-table__cell">01999999999</td>
             </tr>
             </tbody>
           </table>
@@ -151,9 +151,9 @@
                   <td class="govuk-table__cell">21</td>
                   <td class="govuk-table__cell">OFF</td>
                   <td class="govuk-table__cell">19/02/2023</td>
-                  <td class="govuk-table__cell">08/070/0058</td>
+                  <td class="govuk-table__cell">X8/0X0/0XX8</td>
                   <td class="govuk-table__cell">Agricultural holding</td>
-                  <td class="govuk-table__cell">T &amp; A TEASDALE LTD</td>
+                  <td class="govuk-table__cell">A Farm Ltd</td>
                 </tr>
                 </tbody>
               </table>
@@ -183,8 +183,8 @@
                 </thead>
                 <tbody class="govuk-table__body">
                 <tr class="govuk-table__row">
-                  <td class="govuk-table__cell">175491</td>
-                  <td class="govuk-table__cell">UK 0 10527 09977</td>
+                  <td class="govuk-table__cell">17XX91</td>
+                  <td class="govuk-table__cell">UK 0 1XXX7 09XXX7</td>
                   <td class="govuk-table__cell">Sheep</td>
                   <td class="govuk-table__cell">1</td>
                 </tr>
