--- a/src/server/mocks/dashboard_9.njk
+++ b/src/server/mocks/dashboard_9.njk
@@ -168,10 +168,10 @@
               <td class="govuk-table__cell">21/09/2022</td>
               <td class="govuk-table__cell">6</td>
               <td class="govuk-table__cell">27</td>
-              <td class="govuk-table__cell">62/191/0201</td>
+              <td class="govuk-table__cell">6X/1X1/0XX1</td>
               <td class="govuk-table__cell">Agricultural holding</td>
-              <td class="govuk-table__cell">MSS Leanne Davenport</td>
-              <td class="govuk-table__cell">Tate Bank Farm, Cumbria</td>
+              <td class="govuk-table__cell">A person</td>
+              <td class="govuk-table__cell">A Farm</td>
             </tr>
 
             <tr class="govuk-table__row">
@@ -180,10 +180,10 @@
               <td class="govuk-table__cell">25/09/2022</td>
               <td class="govuk-table__cell">3</td>
               <td class="govuk-table__cell">18</td>
-              <td class="govuk-table__cell">66/719/0190</td>
+              <td class="govuk-table__cell">6X/7X9/0XX0</td>
               <td class="govuk-table__cell">Agricultural holding</td>
-              <td class="govuk-table__cell">Mrs Janice Irving</td>
-              <td class="govuk-table__cell">Ardenlee, Penrith</td>
+              <td class="govuk-table__cell">A Person</td>
+              <td class="govuk-table__cell">A Farm</td>
             </tr>
 
             <tr class="govuk-table__row">
@@ -192,10 +192,10 @@
               <td class="govuk-table__cell">28/09/2022</td>
               <td class="govuk-table__cell">1</td>
               <td class="govuk-table__cell">6</td>
-              <td class="govuk-table__cell">64/293/0104</td>
+              <td class="govuk-table__cell">6X/X93/0XX4</td>
               <td class="govuk-table__cell">Agricultural holding</td>
-              <td class="govuk-table__cell">Mr Tony Gibson</td>
-              <td class="govuk-table__cell">14 Mount Pleasant, Durham</td>
+              <td class="govuk-table__cell">A Person</td>
+              <td class="govuk-table__cell">A Farm</td>
             </tr>
 
             <tr class="govuk-table__row">
@@ -204,10 +204,10 @@
               <td class="govuk-table__cell">28/11/2022</td>
               <td class="govuk-table__cell">4</td>
               <td class="govuk-table__cell">32</td>
-              <td class="govuk-table__cell">63/410/0188</td>
+              <td class="govuk-table__cell">X3/4X0/0XX8</td>
               <td class="govuk-table__cell">Agricultural holding</td>
-              <td class="govuk-table__cell">Mr Leslie Manning</td>
-              <td class="govuk-table__cell">Ridge Farm, North Yorkshire</td>
+              <td class="govuk-table__cell">A Person</td>
+              <td class="govuk-table__cell">A Farm</td>
             </tr>
 
             </tbody>
